--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -14,14 +14,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="135dp"
+        android:layout_marginEnd="162dp"
         android:layout_marginBottom="681dp"
-        android:text="Dashboard"
+        android:text="Home"
         android:textAlignment="center"
         android:textColor="#F8F8F8"
         android:textSize="30sp"
         app:layout_anchorGravity="center" />
-
 
     <Button
         android:id="@+id/Task_btn"
@@ -73,10 +72,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="317dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="32dp"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="322dp"
         android:backgroundTint="#00BCD4"
         android:padding="18dp"
         android:text="Calorie Calculator"
